--- a/translation/meganimus-translation-es_ES.toml
+++ b/translation/meganimus-translation-es_ES.toml
@@ -129,7 +129,7 @@ NO_PORTALS_FOUND = "No se encontraron portales."
 NO_PYQT6_FOUND_ERROR = "PyQt6 no encontrado."
 NO_RESULTS = "Sin resultados."
 NO_TAGS_FOUND = "No se encontraron tags en el repositorio."
-OK_BUTTON = "OK"
+OWN_CATEGORY = "Categoría propia"
 PLACEHOLDER_FOR_LANGUAGE = "- Sin idioma elegido -"
 QT_STYLE = "Estilo de QT"
 RESET_BUTTON_MULTIPLE_EDIT = "Restablecer"
