--- a/translation/meganimus-translation-es_ES.toml
+++ b/translation/meganimus-translation-es_ES.toml
@@ -10,7 +10,7 @@ ADD_FILES = "Añadir archivos"
 ADD_FOLDER = "Añadir carpeta"
 ALREADY_UPDATED = "Estás en la versión más reciente."
 ALL_PORTALS = "Todos los portales"
-API_FAIL = "Error de API:\n{e}"
+API_FAIL = "Error de API:<br>{error}"
 API_KEY_SAVE_FIRST = "Guarda tu API KEY en la configuración de Meganimus primero."
 APPIMAGE_AND_EXECUTABLE = "AppImage/Executable"
 APP_NAME = "Meganimus"
@@ -68,6 +68,7 @@ FILE = "Archivo"
 FOLDER = "Carpeta"
 FPS_GALLIUM_HUD = "Gallium HUD (No siempre compatible)"
 GAMEMODE = "Usar Feral gamemode"
+ICON_TOOLBAR_SIZE = "Tamaño del botón"
 ICON_WIDTH_CLASSIC = "Tamaño del icono (Clásico)"
 ICON_WIDTH_GRID = "Tamaño del icono (Cuadrícula)"
 IMAGE_FILTER = "Archivos de imagen (*.jpg *.jpeg *.png *.webp);;Todos los archivos (*)"
@@ -100,9 +101,6 @@ LAYOUT_MODE = "Modo de diseño"
 LAYOUT_MODE_CLASSIC = "Clásico"
 LAYOUT_MODE_GRID = "Cuadrícula"
 LAYOUT_MODE_LIST = "Lista"
-LAYOUT_MODE_CLASSIC_BARE = "Clásico (bare)"
-LAYOUT_MODE_GRID_BARE = "Cuadrícula (bare)"
-LAYOUT_MODE_LIST_BARE = "Lista (bare)"
 LOAD_HEROES = "Cargar heroes"
 LOAD_ICONS = "Cargar iconos"
 MANAGE_SHORTCUTS = "Gestionar accesos directos"
@@ -113,7 +111,6 @@ MEGANIMUS_SETTINGS = "Preferencias de Meganimus"
 MEGANIMUS_TRAY_TOGGLE = "Cambiar visibilidad"
 MENU_FOLDER = "Carpeta menú"
 MODIFY_PORTAL = "Modificar portal"
-MOVE_SHORTCUTS_CONFIRM = "¿Quieres mover los accesos directos de \"{old}\" a \"{new}\"?"
 MULTIPLE_PORTAL_EDITOR = "Editor de múltiples portales"
 MULTIPLE_PORTAL_CREATOR = "Creador de múltiples portales"
 MULTIPLE_PORTAL_REMOVER = "Eliminador de múltiples portales"
@@ -146,6 +143,7 @@ SELECT = "Seleccionar"
 SELECT_ALL_IN_MULTIPLE_EDIT = "Todos"
 SELECT_AT_LEAST_ONE_IMAGE = "Selecciona al menos una imagen."
 SELECT_FILE = "Seleccionar archivo"
+SELECT_FOLDER = "Seleccionar carpeta"
 SELECT_GAME = "Seleccionar juego"
 SELECT_GAME_FOLDER = "Seleccionar carpeta del juego"
 SELECT_PORTAL_ART = "Seleccionar arte"
